src/snapshots/prowl__ui__tests__renders_frame_with_process_detail.snap
---
source: src/ui.rs
expression: frame
---
"╭ myapp ─────────────────────────────────────────────────────────────────────────────── - 1000ms + ╮"
"│ 12.3% ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀╭ Process ──────┬ Time ─────────┬ I/O ─────────┬ Tree ─────────╮│"
"│       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│Status: Running│Elapsed: 01:02:│ Read: 4.0 MiB│ Threads: 1    ││"
"│C      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│Parent: bash   │    CPU: 00:01:│Write: 2.0 MiB│Children: 2    ││"
"│P      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│  User: alice  │Subproc: 00:00:│              │               ││"
"│U      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│               │               │              │               ││"
"│       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀╰───────────────┴───────────────┴──────────────┴───────────────╯│"
"│       ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣰  Memory    1.5%  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸  50.0 MiB│"
"├ filter ──────────────────────────────────────────────────────────────────────────────────────────┤"
"│  PID    USER      STATE     CPU%  RES      Command                                               │"
"│   1234  alice     Running   12.3  50.0 MiB ▾ /usr/bin/myapp --serve --port 8080                  │"
"│   1235  alice     Sleeping   1.2  8.0 MiB  ├─ ▾ /usr/bin/myapp worker --queue tasks              │"
"│    200            Sleeping   0.0           │  └─ helper                                          │"
"│   1236  alice     Sleeping   0.0  4.0 MiB  └─ /usr/bin/myapp logger                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"├ /usr/bin/myapp --serve --port 8080 [1234] process · ● Running ───────────────────────────────────┤"
"│╭ Identity ─────────────────────┬ Memory ────────────────────────┬ Scheduler ────────────────────╮│"
"││Exe:       /usr/bin/myapp      │Virtual:   800.8 MiB            │Policy:    OTHER               ││"
"││CWD:       /home/alice/projects│Resident:  68.4 MiB             │Nice/Pri:  0 / 20              ││"
"││Cgroup:    /user.slice/user-100│Peak RSS:  70.3 MiB             │Last CPU:  3                   ││"
"││Threads:   8                   │Heap:      39.1 MiB             │FDs:       42 / 1024           ││"
"││                               │Stack:     132.0 KiB            │OOM:       180 (+0)            ││"
"││                               │Swap:      0 B                  │                               ││"
"││                               │                                │                               ││"
"│╰───────────────────────────────┴────────────────────────────────┴───────────────────────────────╯│"
"│ Wchan: running  │  Faults min/maj: 12.3k/7  │  Ctx v/n: 1.2k/56  │  CPU u+s: 00:00:11            │"
"│ env: SHELL=/bin/bash  HOME=/home/alice  USER=alice  LANG=en_US.UTF-8                             │"
"╰───────────────────────────────────────────────────────────────────────────────────────── ⏎ close ╯"
