src/snapshots/prowl__ui__tests__renders_frame_with_thread_detail.snap
---
source: src/ui.rs
expression: frame
---
"╭ myapp ─────────────────────────────────────────────────────────────────────────────── - 1000ms + ╮"
"│ 12.3% ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀╭ Process ──────┬ Time ─────────┬ I/O ─────────┬ Tree ─────────╮│"
"│       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│Status: Running│Elapsed: 01:02:│ Read: 4.0 MiB│ Threads: 1    ││"
"│C      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│Parent: bash   │    CPU: 00:01:│Write: 2.0 MiB│Children: 2    ││"
"│P      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│  User: alice  │Subproc: 00:00:│              │               ││"
"│U      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│               │               │              │               ││"
"│       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀╰───────────────┴───────────────┴──────────────┴───────────────╯│"
"│       ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣰  Memory    1.5%  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸  50.0 MiB│"
"├ filter ──────────────────────────────────────────────────────────────────────────────────────────┤"
"│  PID    USER      CPU%  RES      Command                                                         │"
"│   1234  alice     12.3  50.0 MiB ▾ /usr/bin/myapp --serve --port 8080                            │"
"│   1235  alice      1.2  8.0 MiB  ├─ ▾ /usr/bin/myapp worker --queue tasks                        │"
"│    200             0.0           │  └─ helper                                                    │"
"│   1236  alice      0.0  4.0 MiB  └─ /usr/bin/myapp logger                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"├ helper [200] thread · ● Sleeping ─ ↵ detail ─ threads ───────────────────────────────────────────┤"
"│╭ Identity ─────────────────────┬ Scheduler ─────────────────────┬ Activity ─────────────────────╮│"
"││TID:       200                 │Policy:    OTHER                │Wchan:     futex_wait_queue    ││"
"││TGID:      1235                │RT prio:   —                    │MinFlt:    64                  ││"
"││Nice:      0                   │Last CPU:  1                    │MajFlt:    0                   ││"
"││Priority:  20                  │User CPU:  00:00:01             │Ctx vol:   89                  ││"
"││                               │Sys CPU:   00:00:00             │Ctx nonvol:4                   ││"
"││                               │                                │                               ││"
"│╰───────────────────────────────┴────────────────────────────────┴───────────────────────────────╯│"
"╰───────────────────────────────────────────────────────────────────────────────────────── ⏎ close ╯"
